<resources>
    <string name="app_name">LaunchTime</string>
    <string name="remove_launcher">Quitar</string>
    <string name="uninstall_app">Deinstalar</string>
    <string name="app_was_uninstalled">La aplicación fue deinstalada</string>
    <string name="uninstall_canceled">Deinstalacion cancelado</string>
    <string name="could_not_uninstall">No podía deinstalar la aplicación</string>
    <string name="category_Search">Busca</string>
    <string name="category_Talk">Comm.</string>
    <string name="category_Games">Videojuegos</string>
    <string name="category_Internet">Internet</string>
    <string name="category_Media">Audio</string>
    <string name="category_Graphics">Gráficos</string>
    <string name="category_Utilities">Utilidades</string>
    <string name="category_Other">Otro</string>
    <string name="category_Settings">Configuractión</string>
    <string name="category_Hidden">Escondido</string>
    <string name="category_Dumb">Tonto</string>
    <string name="category_Search_full">Busca &amp; Reciente</string>
    <string name="category_Talk_full">Communicación</string>
    <string name="category_Games_full">Videojuegos &amp; Diversiónes</string>
    <string name="category_Internet_full">Internet</string>
    <string name="category_Media_full">Audio &amp; Músico</string>
    <string name="category_Graphics_full">Gráficos &amp; Video</string>
    <string name="category_Utilities_full">Utilidades &amp; Téchnicas</string>
    <string name="category_Other_full">Otro</string>
    <string name="category_Settings_full">Configuractión &amp; Sistemo</string>
    <string name="category_Hidden_full">Escondido</string>
    <string name="category_Dumb_full">Teléfono tonto</string>
    <string name="search_apps">Buscar tus Apps</string>
    <string name="recent_apps">Apps recientes</string>
    <string name="sort_category">Clasificar\nCategoría</string>
    <string name="add_widgets">Añadir\nAparatos</string>
    <string name="add_category">Añadir\nCategoría</string>
    <string name="rename_category">Editar\nCategoría</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="rename_cat">Rename Category</string>
    <string name="rename_cat2">Rename this category</string>
    <string name="rename_cat3">Rename this special category (will retain its previous functionality)</string>
    <string name="need_name">You must give a name</string>
    <string name="no_rename">Couldn\'t rename category</string>
    <string name="add_cat">Add Category</string>
    <string name="add_cat2">Add a category</string>
    <string name="no_add_cat">Couldn\'t add category</string>
    <string name="delete_cat">Delete category?</string>
    <string name="delete_cat_prompt">Are you sure you want to delete this category?</string>
    <string name="delete">Delete</string>
    <string name="cat_deleted">Category deleted. Any applications were moved to Category %s</string>
    <string name="no_delete_cat">Couldn\'t delete category</string>
    <string name="short_name">Short Name</string>
    <string name="full_name">Full Name (optional)</string>
    <string name="is_tiny">Is Tiny</string>
    <string name="pref_orient">Orientation</string>
    <string name="pref_about">Help</string>
    <string name="pref_help_about">Help and about</string>
    <string name="send_info_expl">The following information will be sent to the developer (only) to
        better understand how users categorize their apps. Only your IP is logged.</string>
    <string name="send">Send</string>
    <string name="send_comment">Optional Comment:</string>
    <string name="remove_data">Uncheck any item you don\'t want to send</string>
    <string name="sent_success">Data successfully sent. Thanks!</string>
    <string name="sent_failed">Data tranfer failed:</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="backup_explain">If you have everything the way you like it, or are about to make
        some big changes, take a backup! Please note that these backups will be deleted if you
        uninstall the app, so use the \"Copy selected backup to filesystem\" button to save ones
        you want to keep.</string>
    <string name="take_new_backup">Take new backup</string>
    <string name="restore_selected_backup">Restore selected backup</string>
    <string name="delete_selected_backup">Delete selected backup</string>
    <string name="copy_selected_backup">Copy selected backup to filesystem</string>
    <string name="load_a_backup">Load a backup from filesystem</string>
    <string name="there_was_a_problem">There was a problem</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="send_error_report">Send Error Report</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="show_extfs_opts">Show external backup options…</string>
    <string name="hide_extfs_opts">Hide external backup options…</string>
    <string name="no_backup_selected">None selected</string>
    <string name="opt_name">Optional name</string>
    <string name="new_backup">New backup</string>
    <string name="take_backup">Take backup</string>
    <string name="backup_success">Backup successful!</string>
    <string name="backup_failed">Backup failed</string>
    <string name="select_file_restore">Select file to restore</string>
    <string name="no_backup">No such backup \"</string>
    <string name="confirm_restore1">Restore?</string>
    <string name="confirm_restore2">If you restore, any current changes will be lost.</string>
    <string name="restore">Restore</string>
    <string name="restore_successful">Restore successful! Will now restart.</string>
    <string name="restore_failed_rollback">Restore failed. Rolling back</string>
    <string name="restore_failed2">Restore failed. Database state unknown.</string>
    <string name="confirm_delete1">Delete?</string>
    <string name="confirm_delete2">Are you sure you want to delete the back up \'</string>
    <string name="delete_success">Delete successful!</string>
    <string name="delete_failed">Delete failed</string>
    <string name="copy_sucess">Copy successful!</string>
    <string name="copy_failed">Copy failed</string>
    <string name="select_save_location">Select location to save</string>
    <string name="perm_granted">Yay! Try your operation again.</string>
    <string name="perm_not_granted">Boo</string>
    <string name="app">app</string>
    <string name="config">Config</string>
    <string name="previously_deleted">Previously Deleted</string>
    <string name="pref_senddat">Send app data</string>
    <string name="pref_senddat_summ">Send data about which apps are installed to the app
        developer</string>
    <string name="pref_backup">Backup and Restore</string>
    <string name="pref_backup_summ">Backup or restore LaunchTime\'s configuration (Categories,
        app order, recent apps, etc)</string>
    <string name="pref_system">System Settings</string>
    <string name="pref_system_summ">Show the system settings</string>
    <string name="pref_tabsize">Category tab size</string>
    <string name="pref_iconsize">Launcher size</string>
    <string name="pref_icontext">Launcher text color</string>
    <string name="pref_tabtext">Tab text color</string>
    <string name="pref_tabback">Tab background color</string>
    <string name="pref_tabsel_text">Tab selected text color</string>
    <string name="pref_tabsel">Tab selected color</string>
    <string name="pref_drag">Drag over color</string>
    <string name="choose_your_color">Choose your color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="brightness">Brightness</string>
    <string name="transparency">Transparency</string>
    <string name="pref_color_style">Color and Style</string>
    <string name="pref_app_system">App and System</string>
    <string name="prefs_new_apps_cat">Auto-categorize new apps</string>
    <string name="prefs_cat_apps">Apps will be categorized</string>
    <string name="prefs_cat_no">Apps will be placed in \"Other\"</string>
    <string name="pref_cat_loc_text">Categories Location</string>
    <string name="pref_cat_loc">Categories will be on the %s</string>
    <string name="pref_todd_lock">Toddler Mode</string>
    <string name="pref_todd_lock_summ">Attempt to limit toddler-related damage by locking into the
        current category and preventing dragging/moving/deleting. Exit by entering the code on
        the screen.</string>
    <string name="pref_returnhome_summ">If away, go to the top-most category: %s.</string>
    <string name="pref_returnhome">Return home timeout</string>
    <string name="search_hint">Search. \".\" is a wildcard</string>
    <string name="widget_alreay">This widget is already in category \"%s\"</string>
    <string name="icons_pack_name">Choose iconpack/theme</string>
    <string name="icons_pack_default_name">System icons</string>
    <string name="letters">BCDFGHJKLMNPQRSTVWXZ</string>
    <string name="sort_prompt_title">Sort category by</string>
    <string name="kid_escape_text">Press \'%s\'</string>
    <string name="reset_db">Reset the database?</string>
    <string name="reset_db_explain">The database will be recreated and all apps will be
        re-categorized according to your \"auto-categorize apps\" setting.</string>
    <string name="reset">Reset</string>
    <string name="clear_recent">Clear recent items?</string>
    <string name="clear">Clear</string>
    <string name="reset_database">Reset database</string>
    <string-array name="sort_strings">
        <item>Name</item>
        <item>Recently Used</item>
        <item>Install Date (newest first)</item>
        <item>Install Date (oldest first)</item>
        <item>Package</item>
    </string-array>
    <string name="pref_hide_menu">Hide categories menu</string>
    <string name="pref_show_action">Show action menus</string>
    <string name="pref_extra_actions_title">Extra menu actions</string>
    <string name="pref_extra_actions_summ">Put Uninstall, Remove, and Shortcut on action menu for apps and categories</string>
    <string name="pref_key_show_action_menus_summ">Show popup menu actions on long-click of an app.</string>
</resources>