<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="applicationPreference">


    <ListPreference
        android:defaultValue="0"
        android:title="@string/pref_orient"
        android:entries="@array/pref_orientation_strings"
        android:entryValues="@array/pref_orientation_values"
        android:key="preference_orientation"
        android:summary="%s" />



    <PreferenceScreen
        android:title="@string/pref_senddat"
        android:summary="@string/pref_senddat_summ">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.quaap.launchtime"
            android:targetClass="com.quaap.launchtime.FeedbackActivity"/>
    </PreferenceScreen>


    <PreferenceScreen
        android:title="@string/pref_backup"
        android:summary="@string/pref_backup_summ">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.quaap.launchtime"
            android:targetClass="com.quaap.launchtime.BackupActivity"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/pref_system"
        android:summary="@string/pref_system_summ">
        <intent android:action="android.settings.SETTINGS"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/pref_about"
        android:summary="@string/pref_help_about">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.quaap.launchtime"
            android:targetClass="com.quaap.launchtime.AboutActivity"/>
    </PreferenceScreen>


</PreferenceScreen>