<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:text="@string/search_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/search_box"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/search_box"
            android:layout_width="250dp"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text|textNoSuggestions"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <com.quaap.launchtime.components.StaticListView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_dropdownarea"
        android:background="#22eeeeee" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/recent_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_delete"
            android:src="@android:drawable/ic_delete"
            android:id="@+id/btn_clear_recents"
            android:layout_weight="1"
            android:contentDescription="Clear Recent Items"
            android:clickable="true"
            android:layout_gravity="bottom|end" />

    </LinearLayout>

</LinearLayout>