<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quaap.launchtime_official.FeedbackActivity"
    android:orientation="vertical"
    android:background="@android:color/background_light">

    <TextView
        android:text="@string/send_info_expl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textColor="@color/textcolorinv" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/info_send"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_app_name"
            android:textSize="18sp"
            android:textColor="@color/textcolorinv"
            android:layout_margin="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_app_version"
            android:textSize="18sp"
            android:textColor="@color/textcolorinv"
            android:layout_margin="6dp" />

    </LinearLayout>

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_send"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView6" />

    <TextView
        android:text="@string/send_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:labelFor="@+id/info_user_message"
        android:layout_below="@+id/info_send"
        android:textColor="@color/textcolorinv" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/info_user_message"
        android:layout_below="@+id/textView7" />

    <TextView
        android:text="@string/remove_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/info_user_message"
        android:textColor="@color/textcolorinv" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView5"
        android:id="@+id/info_data_items"
        android:layout_alignParentBottom="true"
        android:background="#558888dd" />

</RelativeLayout>
